src/main/java/com/example/DiplomaSite/error/DiplomaDefenseCreationException.java
package com.example.DiplomaSite.error;

public class DiplomaDefenseCreationException extends RuntimeException{
    public DiplomaDefenseCreationException(String message, Throwable cause) {
        super(message, cause);
    }
}
